# clickhouse-rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  docker-compose.yml
.github/workflows/: test.yml
clickhouse-rs-cityhash-sys/: Cargo.toml  build.rs
clickhouse-rs-cityhash-sys/src/: lib.rs
clickhouse-rs-cityhash-sys/src/cc/: BUCK  CMakeLists.txt  city.cc  config.h
examples/: array.rs  bench.rs  binary.rs  simple.rs  tls.rs
extras/ci/: generate_certs.sh  overrides.xml
src/: client_info.rs  connecting_stream.rs  errors.rs  lib.rs  retry_guard.rs
src/binary/: encoder.rs  mod.rs  parser.rs  protocol.rs  read_ex.rs  uvarint.rs
src/block/: block.rs  block_info.rs  chunk_iterator.rs  mod.rs  row.rs
src/column/: chunk.rs  column_data.rs  concat.rs  date.rs  factory.rs  list.rs  mod.rs  numeric.rs  string.rs
src/errors/: mod.rs
src/io/: io_future.rs  io_stream.rs  mod.rs  read_to_end.rs  stream.rs  transport.rs
src/pool/: mod.rs
src/pool/futures/: get_handle.rs  mod.rs
src/types/: cmd.rs  date_converter.rs  decimal.rs  either.rs  enums.rs  from_sql.rs  marshal.rs  mod.rs  options.rs  query.rs  stat_buffer.rs  unmarshal.rs  value.rs  value_ref.rs
src/types/block/: block_info.rs  builder.rs  chunk_iterator.rs  compressed.rs  mod.rs  row.rs
src/types/column/: array.rs  chrono_datetime.rs  chunk.rs  column_data.rs  concat.rs  date.rs  datetime64.rs  decimal.rs  enums.rs  factory.rs  fixed_string.rs  ip.rs  iter.rs  list.rs  low_cardinality.rs  map.rs  mod.rs  nullable.rs  numeric.rs  simple_agg_func.rs  string.rs  string_pool.rs  util.rs
src/types/column/iter/: mod.rs
src/types/query_result/: either.rs  fold_block.rs  mod.rs  stream_blocks.rs
src/types/query_result_owned/: mod.rs  stream_blocks.rs
tests/: clickhouse.rs
