[package]
name = "clickhouse-rs"
version = "1.0.0-alpha.1"
authors = ["Mikhail Sukharev <suharev7@gmail.com>"]
license = "MIT"
homepage = "https://github.com/suharev7/clickhouse-rs"
repository = "https://github.com/suharev7/clickhouse-rs"
description = "Asynchronous Yandex ClickHouse client library."
documentation = "https://docs.rs/clickhouse-rs/"
readme = "README.md"
keywords = ["tokio", "database", "clickhouse"]
categories = ["database"]
edition = "2018"
exclude = ["tests/*", "examples/*"]

[features]
default = ["tokio_io"]
tls = ["tokio-native-tls", "native-tls"]
async_std = ["async-std"]
tokio_io = ["tokio"]

[dependencies]
byteorder = "^1.3"
chrono = "0.4"
chrono-tz = "0.5"
crossbeam = "0.8.0"
thiserror = "1.0.20"
futures-core = "0.3.5"
futures-sink = "0.3.5"
hostname = "^0.3"
lazy_static = "1.4.0"
lz4 = "1.23.2"
pin-project = "1.0.4"
url="^2"
uuid = "0.8.1"
combine = "4.2.3"

[dependencies.futures-util]
version = "0.3.12"
features = ["sink"]

[dependencies.tokio]
version = "1.0"
default-features = false
features = ["io-util", "time", "net", "sync", "rt-multi-thread"]
optional = true

[dependencies.async-std]
version = "1.6"
optional = true

[dependencies.clickhouse-rs-cityhash-sys]
path = "clickhouse-rs-cityhash-sys"
version = "0.1.2"

[dependencies.log]
version = "0.4.8"
features = ["std", "serde"]

[dependencies.native-tls]
version = "0.2"
optional = true

[dependencies.tokio-native-tls]
version = "^0.3"
optional = true

[dev-dependencies]
env_logger = "^0.8"
rand = "^0.8"

[dev-dependencies.tokio]
version = "1.0"
default-features = false
features = ["macros"]
