[package]
name = "clickhouse-rs"
version = "0.1.21"
authors = ["Mikhail Sukharev <suharev7@gmail.com>"]
license = "MIT"
homepage = "https://github.com/suharev7/clickhouse-rs"
repository = "https://github.com/suharev7/clickhouse-rs"
description = "Tokio based asynchronous Yandex ClickHouse client library."
documentation = "https://docs.rs/clickhouse-rs"
readme = "README.md"
keywords = ["tokio", "database", "clickhouse"]
categories = ["database"]
edition = "2018"
exclude = ["tests/*", "examples/*"]

[features]
default = []
tls = ["tokio-tls", "native-tls"]

[dependencies]
log = "0.4.11"
futures = "0.1.29"
tokio = "0.1.22"
tokio-timer = "0.2.11"
tokio-tls = { version = "0.2.1", optional = true }
native-tls = { version = "0.2.3", optional = true }
hostname = "^0.3"
cityhash-rs = "1.0"

chrono = "0.4"
chrono-tz = "0.5"

lz4 = "1.23.2"

byteorder = "1.3.4"
thiserror = "1.0.20"
url="^2"
lazy_static = "1.4.0"

crossbeam = "0.7"
uuid = "0.8.1"
combine = "4.3.2"

[dev-dependencies]
env_logger = "^0.7"
rand = "^0.7"
