[package]
name = "clickhouse-rs"
version = "1.1.0-alpha.1"
authors = ["Mikhail Sukharev <suharev7@gmail.com>"]
license = "MIT"
homepage = "https://github.com/suharev7/clickhouse-rs"
repository = "https://github.com/suharev7/clickhouse-rs"
description = "Asynchronous Yandex ClickHouse client library."
documentation = "https://docs.rs/clickhouse-rs/"
readme = "README.md"
keywords = ["tokio", "database", "clickhouse"]
categories = ["database"]
edition = "2021"
exclude = ["tests/*", "examples/*"]

[features]
default = ["tokio_io"]
_tls = [] # meta feature for the clickhouse-rs generic TLS code
tls = ["tls-native-tls"] # backward compatibility
tls-native-tls = ["tokio-native-tls", "native-tls", "_tls"]
tls-rustls = ["tokio-rustls", "rustls", "rustls-pemfile", "webpki-roots", "_tls"]
async_std = ["async-std"]
tokio_io = ["tokio"]

[dependencies]
byteorder = "^1.4"
chrono-tz = "^0.8"
crossbeam = "^0.8"
thiserror = "^1.0"
futures-core = "^0.3"
futures-sink = "^0.3"
hostname = "^0.3"
lazy_static = "1.4.0"
lz4 = "^1.24"
pin-project = "^1.1"
url = "^2"
uuid = "^1.4"
combine = "^4.6"
percent-encoding = "^2.3"
either = "^1.6"
cfg-if = "1.0.0"

[dependencies.futures-util]
version = "^0.3"
features = ["sink"]

[dependencies.tokio]
version = "^1.32"
default-features = false
features = ["io-util", "time", "net", "sync", "rt-multi-thread"]
optional = true

[dependencies.async-std]
version = "1.6"
optional = true

[dependencies.clickhouse-rs-cityhash-sys]
path = "clickhouse-rs-cityhash-sys"
version = "0.1.2"

[dependencies.log]
version = "0.4.8"
features = ["std", "serde"]

[dependencies.native-tls]
version = "0.2"
optional = true

[dependencies.tokio-native-tls]
version = "^0.3"
optional = true

[dependencies.rustls]
version = "0.22.1"
optional = true

[dependencies.rustls-pemfile]
version = "2.0"
optional = true

[dependencies.tokio-rustls]
version = "0.25.0"
optional = true

[dependencies.webpki-roots]
version = "*"
optional = true

[dependencies.chrono]
version = "^0.4"
default-features = false
features = ["std"]

[dev-dependencies]
env_logger = "^0.10"
pretty_assertions = "1.3.0"
rand = "^0.8"

[dev-dependencies.tokio]
version = "^1.32"
default-features = false
features = ["macros"]
